--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+Full URL of page to be crawled is to be passed as argument.
+
 DB userName/pass parameters are at the top of pagecrawler.db.DBFunctions
 
 CREATE DATABASE crawler;
